# harper

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  docker-compose.yaml
.cache/clangd/index/: TinySHA1.hpp.635D21847994178C.idx  absl_vlog_is_on.h.51C24B7F186B806F.idx  address.hpp.966F1BBB1860BA3E.idx  address.hpp.96F82E2C3FA6C36B.idx  address.ipp.B0000E26E6A94854.idx  address_is_readable.cc.87B8C7DB4F012C35.idx  address_is_readable.h.CFD12E9AAAB29A76.idx  address_v4.hpp.7FA669B0C8D0ADE2.idx  address_v4.hpp.AD98271E2F284291.idx  address_v4.ipp.2666CE235E804884.idx  address_v4_iterator.hpp.35726B908BFB0EC0.idx  address_v4_range.hpp.5E5C9ED8FF987D7C.idx  address_v6.hpp.C92D6CE775CCF0EF.idx  address_v6.hpp.E0E483238425E855.idx  address_v6.ipp.76605DFF54615365.idx  address_v6_iterator.hpp.9545440B9019E862.idx  address_v6_range.hpp.C35F58E2C5A5E90F.idx  algorithm.h.9F84E01C41572A6B.idx  allocator.hpp.6299D91C94F7DB3E.idx  any_completion_executor.hpp.9C76E38C8D1D9462.idx  any_completion_executor.ipp.491F230A0CB65B52.idx  any_completion_handler.hpp.021C49FED7979D37.idx  any_executor.hpp.2320BF69A657CE30.idx  any_invocable.h.743CC6360AFCC09C.idx  any_invocable.h.DA7A6157E15A5297.idx  any_io_executor.hpp.86E90A6D67B6D219.idx  any_io_executor.ipp.80E0BA3C221543D3.idx  app.h.E57B05E1BE903F3B.idx  append.hpp.316EB323D65C70E1.idx  append.hpp.3807F0DDA7D7DB1B.idx  append_truncated.h.933FB4BD0D216C4B.idx  arg.cc.BE3BCD4643396B81.idx  arg.h.30DE45317FF712BA.idx  array.hpp.0141F5B6F38C090E.idx  array_fwd.hpp.51CAD0378CB6CA57.idx  as_tuple.hpp.5D3F6E2574DEC326.idx  as_tuple.hpp.A6EC875C146D550A.idx  ascii.cc.CB4238178A29D202.idx  ascii.h.5886F935270FC47C.idx  asio.hpp.675ACE6B11983F53.idx  (+915 more)
notes/: madison.txt
src/: CMakeLists.txt  main.cc  player.h  shop.cc  shop.h  stats.h  utils.cc  utils.h
src/madison/: property.h
src/static/css/: base.css  claude.css  click.css  item.css  middle.css  shop.css
src/static/css/donuts/: dropdown.css  item-bar.css  layout.css  left-section.css
src/static/css/finance/: finance.css
src/static/css/home/: home.css
src/static/css/madison/: madison.css
src/static/data/: bankruptcy_filed.csv  bankruptcy_filed_yoy.csv  bankruptcy_pending.csv  bankruptcy_pending_yoy.csv  bankruptcy_terminated.csv  bankruptcy_terminated_yoy.csv
src/static/html/: item.html
src/static/js/: environment.js  index.js  item.js  shop.js  utils.js
src/static/js/donuts/: item.js  shop.js  utils.js
src/static/js/finance/: finance.js
src/static/js/madison/: madison.js
src/static/json/: items.json
src/static/json/donuts/: items.json
src/static/old/css/: click.css  item copy.css  item.css  shop.css
src/templates/: index.html  middle.html  right.html
src/templates/donuts/: index.html  left.html  right.html
src/templates/finance/: finance.html
src/templates/home/: home.html
src/templates/madison/: madison.html
